--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,8 +1,29 @@
 <Project>
 	<PropertyGroup>
-		<Version_ReactiveUI>18.4.1</Version_ReactiveUI>
+		<!-- BD Common -->
 		<Version_BDCommon>1.23.10130.11830</Version_BDCommon>
 		<Version_BDSteamClient>1.23.10130.11830</Version_BDSteamClient>
+		<Version_BDNotifyIcon>1.1.0</Version_BDNotifyIcon>
+		<!-- RxUI -->
+		<Version_ReactiveUI>18.4.1</Version_ReactiveUI>
+		<!-- Avalonia HarfBuzzSharp SkiaSharp -->
+		<Version_Avalonia>0.10.18</Version_Avalonia>
+		<Version_Avalonia_Xaml_Behaviors>0.10.18</Version_Avalonia_Xaml_Behaviors>
+		<Version_Avalonia_Edit>0.10.18</Version_Avalonia_Edit>
+		<Version_Avalonia_CefNet>105.3.22248.142</Version_Avalonia_CefNet>
+		<Version_Avalonia_LibVLCSharp>3.6.7</Version_Avalonia_LibVLCSharp>
+		<Version_Avalonia_FluentUI>1.4.5</Version_Avalonia_FluentUI>
+		<Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.701</Version_Avalonia_LiveChartsCore_SkiaSharpView>
+		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/HarfBuzzSharp.props -->
+		<Version_HarfBuzzSharp>2.8.2.3</Version_HarfBuzzSharp>
+		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/SkiaSharp.props -->
+		<Version_SkiaSharp>2.88.3</Version_SkiaSharp>
+		<Version_CommandLine>2.0.0-beta4.22272.1</Version_CommandLine>
+		<!-- AppCenter -->
+		<Version_AppCenter>5.0.1</Version_AppCenter>
+		<Version_Avalonia_AppCenter>4.5.3</Version_Avalonia_AppCenter>
+		<!-- ArchiSteamFarm Library -->
+		<Version_ArchiSteamFarm_Library>5.2.6.3-preview.220608</Version_ArchiSteamFarm_Library>
 	</PropertyGroup>
 	<!-- BD Common -->
 	<ItemGroup>
@@ -55,6 +76,7 @@
 	<ItemGroup>
 		<PackageVersion Include="AutoMapper" Version="12.0.1" />
 		<PackageVersion Include="AutoMapper.Collection" Version="9.0.0" />
+		<PackageVersion Include="AutoMapper.Collection.EntityFrameworkCore" Version="9.0.0" />
 		<PackageVersion Include="AutoMapper.Extensions.ExpressionMapping" Version="6.0.3" />
 		<PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection"  Version="12.0.0" />
 	</ItemGroup>
@@ -71,6 +93,12 @@
 		<PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
 		<PackageVersion Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.5.0" />
+	</ItemGroup>
+	<!-- Swagger OpenAPI Documentation AspNetCore 2x Compat -->
+	<ItemGroup>
+		<PackageVersion Include="AspNetCore2.NETStandard.Swashbuckle.AspNetCore" Version="6.3.1" />
+		<PackageVersion Include="AspNetCore2.NETStandard.Swashbuckle.AspNetCore.Annotations" Version="6.3.1" />
+		<PackageVersion Include="AspNetCore2.NETStandard.Swashbuckle.AspNetCore.Newtonsoft" Version="6.3.1" />
 	</ItemGroup>
 	<!-- NLog -->
 	<ItemGroup>
@@ -113,9 +141,13 @@
 	<ItemGroup>
 		<PackageVersion Include="CsvHelper" Version="30.0.1" />
 	</ItemGroup>
-	<!-- Html Parser -->
+	<!-- Html Parser(AngleSharp) -->
 	<ItemGroup>
 		<PackageVersion Include="AngleSharp" Version="1.0.1" />
+	</ItemGroup>
+	<!-- Html Parser(HtmlAgilityPack) -->
+	<ItemGroup>
+		<PackageVersion Include="HtmlAgilityPack" Version="1.11.46" />
 	</ItemGroup>
 	<!-- Serialize MessagePack -->
 	<ItemGroup>
@@ -171,10 +203,17 @@
 	<ItemGroup>
 		<PackageVersion Include="Xamarin.Essentials" Version="1.7.4" />
 	</ItemGroup>
-	<!-- System Reactive -->
-	<!--<ItemGroup>
-		<PackageVersion Include="System.Reactive" Version="5.0.0" />
-	</ItemGroup>-->
+	<!-- Xamarin.Forms -->
+	<ItemGroup>
+		<PackageVersion Include="Xamarin.Forms" Version="5.0.0.2545" />
+		<PackageVersion Include="Xamarin.Forms.Visual.Material" Version="5.0.0.2545" />
+		<PackageVersion Include="Xam.Plugins.Forms.ImageCircle" Version="3.1.1.1-beta" />
+	</ItemGroup>
+	<!-- System Reactive 5 exclude winforms & wpf -->
+	<ItemGroup>
+		<!-- 此包在 tfm net5.0-windows10.0.19041 引用 winforms & wpf，使用删除引用后的自编译高版本本地包覆盖 -->
+		<PackageVersion Include="System.Reactive" Version="5.255.255.255" />
+	</ItemGroup>
 	<!-- ReactiveUI -->
 	<ItemGroup>
 		<PackageVersion Include="ReactiveUI" Version="$(Version_ReactiveUI)" />
@@ -209,16 +248,24 @@
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="7.0.2" />
 	</ItemGroup>
+	<!-- OpenIdConnect -->
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.2" />
+	</ItemGroup>
 	<!-- Microsoft.Extensions.* 7.0 -->
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Logging.AzureAppServices" Version="7.0.2" />
+		<PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+		<PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
 		<PackageVersion Include="Microsoft.Extensions.Caching.SqlServer" Version="7.0.2" />
 		<PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.2" />
+		<PackageVersion Include="Microsoft.Extensions.Primitives" Version="7.0.0" />
 	</ItemGroup>
 	<!-- AspNetCore 7.0 -->
 	<ItemGroup>
@@ -247,11 +294,22 @@
 	</ItemGroup>
 	<!-- BCL 7.0 -->
 	<ItemGroup>
+		<PackageVersion Include="System.Management" Version="7.0.0" />
+		<PackageVersion Include="System.Diagnostics.PerformanceCounter" Version="7.0.0" />
+		<PackageVersion Include="System.Text.Encoding.CodePages" Version="7.0.0" />
+		<PackageVersion Include="System.Text.Encodings.Web" Version="7.0.0" />
 		<PackageVersion Include="System.Text.Json" Version="7.0.1" />
 		<PackageVersion Include="System.Net.Http.Json" Version="7.0.0" />
+		<PackageVersion Include="System.Net.Http.WinHttpHandler" Version="7.0.0" />
 		<PackageVersion Include="System.Security.Cryptography.ProtectedData" Version="7.0.0" />
 		<PackageVersion Include="System.Security.Cryptography.Xml" Version="7.0.1" />
 		<PackageVersion Include="System.Drawing.Common" Version="7.0.0" />
+		<PackageVersion Include="System.Security.Principal.Windows" Version="5.0.0" />
+		<PackageVersion Include="System.Buffers" Version="4.5.1" />
+		<PackageVersion Include="System.Memory" Version="4.5.5" />
+		<PackageVersion Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
+		<PackageVersion Include="System.Diagnostics.Tracing" Version="4.3.0" />
+		<PackageVersion Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
 	</ItemGroup>
 	<!-- Edge WebView2 -->
 	<ItemGroup>
@@ -275,5 +333,240 @@
 	<!-- Puppeteer 库提供高级 API，以使用 DevTools 协议控制基于 Chromium 的浏览器。 -->
 	<ItemGroup>
 		<PackageVersion Include="PuppeteerSharp" Version="9.0.2" />
+	</ItemGroup>
+	<!-- WindowsRuntime(NETFX) & PowerShell 5 -->
+	<ItemGroup>
+		<PackageVersion Include="System.Runtime.WindowsRuntime" Version="4.7.0" />
+		<PackageVersion Include="System.Runtime.WindowsRuntime.UI.Xaml" Version="4.7.0" />
+		<PackageVersion Include="Microsoft.PowerShell.5.ReferenceAssemblies" Version="1.1.0" />
+	</ItemGroup>
+	<!-- Windows SDK -->
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+	</ItemGroup>
+	<!-- AspNetCore 2x Compat -->
+	<ItemGroup>
+		<!-- AspNetCore 2x 目前仅用于 iOS/Android -->
+		<!-- 使用修复高版本中 Microsoft.Extensions.Primitives 破坏性更改导致不兼容的自编译高版本本地包覆盖 -->
+		<PackageVersion Include="Microsoft.Net.Http.Headers" Version="2.2.255.255" />
+		<PackageVersion Include="AspNetCore2.NETStandard.NLog.Web.AspNetCore" Version="5.0.0" />
+	</ItemGroup>
+	<!-- Microsoft.AppCenter -->
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.AppCenter" Version="$(Version_AppCenter)" />
+		<PackageVersion Include="Microsoft.AppCenter.Analytics" Version="$(Version_AppCenter)" />
+		<PackageVersion Include="Microsoft.AppCenter.Crashes" Version="$(Version_AppCenter)" />
+	</ItemGroup>
+	<!-- Avalonia.AppCenter -->
+	<ItemGroup>
+		<PackageVersion Include="Aigio.Avalonia.AppCenter" Version="$(Version_Avalonia_AppCenter)" />
+		<PackageVersion Include="Aigio.Avalonia.AppCenter.Analytics" Version="$(Version_Avalonia_AppCenter)" />
+		<PackageVersion Include="Aigio.Avalonia.AppCenter.Crashes" Version="$(Version_Avalonia_AppCenter)" />
+	</ItemGroup>
+	<!-- Moq -->
+	<ItemGroup>
+		<PackageVersion Include="Moq" Version="4.18.4" />
+	</ItemGroup>
+	<!-- HarfBuzzSharp -->
+	<ItemGroup>
+		<PackageVersion Include="HarfBuzzSharp" Version="$(Version_HarfBuzzSharp)" />
+		<PackageVersion Include="HarfBuzzSharp.NativeAssets.Linux" Version="$(Version_HarfBuzzSharp)" />
+	</ItemGroup>
+	<!-- SkiaSharp -->
+	<ItemGroup>
+		<PackageVersion Include="SkiaSharp" Version="$(Version_SkiaSharp)" />
+		<PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="$(Version_SkiaSharp)" />
+	</ItemGroup>
+	<!-- NotifyIcon -->
+	<ItemGroup>
+		<PackageVersion Include="NotifyIcon.Base" Version="$(Version_BDNotifyIcon)" />
+		<PackageVersion Include="NotifyIcon.Linux" Version="$(Version_BDNotifyIcon)" />
+		<PackageVersion Include="NotifyIcon.Mac" Version="$(Version_BDNotifyIcon)" />
+		<PackageVersion Include="NotifyIcon.Windows" Version="$(Version_BDNotifyIcon)" />
+	</ItemGroup>
+	<!-- Compression Tar, GZip, BZip2 -->
+	<ItemGroup>
+		<!-- priority of use System.Formats.Tar -->
+		<PackageVersion Include="SharpZipLib" Version="1.4.2" />
+	</ItemGroup>
+	<!-- Compression 7-Zip -->
+	<ItemGroup>
+		<PackageVersion Include="Squid-Box.SevenZipSharp.Lite" Version="1.5.0.366" />
+	</ItemGroup>
+	<!-- Compression 7-Zip NativeAssets -->
+	<ItemGroup>
+		<PackageVersion Include="7-Zip.NativeAssets.Win32" Version="21.7.0-preview.1" />
+	</ItemGroup>
+	<!-- Compression ZstdNet -->
+	<ItemGroup>
+		<PackageVersion Include="ZstdNet" Version="1.4.5" />
+	</ItemGroup>
+	<!-- CommandLine -->
+	<ItemGroup>
+		<PackageVersion Include="System.CommandLine" Version="$(Version_CommandLine)" />
+		<PackageVersion Include="System.CommandLine.NamingConventionBinder" Version="$(Version_CommandLine)" />
+	</ItemGroup>
+	<!-- Windows TaskScheduler -->
+	<ItemGroup>
+		<PackageVersion Include="TaskScheduler" Version="2.10.1" />
+	</ItemGroup>
+	<!-- Alipay SDK -->
+	<ItemGroup>
+		<PackageVersion Include="AlipaySDKNet.Standard" Version="4.7.144" />
+	</ItemGroup>
+	<!-- Excel -->
+	<ItemGroup>
+		<PackageVersion Include="NPOI" Version="2.6.0" />
+	</ItemGroup>
+	<!-- Github API -->
+	<ItemGroup>
+		<PackageVersion Include="Octokit" Version="5.0.0" />
+	</ItemGroup>
+	<!-- MonoMac(NETSTANDARD) -->
+	<ItemGroup>
+		<!-- Deprecated! use net7.0-macos/net7.0-maccatalyst -->
+		<PackageVersion Include="MonoMac.NetStandard" Version="0.0.4" />
+	</ItemGroup>
+	<!-- Clipboard -->
+	<ItemGroup>
+		<PackageVersion Include="TextCopy" Version="6.2.1" />
+	</ItemGroup>
+	<!-- Valve Data File -->
+	<ItemGroup>
+		<PackageVersion Include="Gameloop.Vdf" Version="0.6.2" />
+	</ItemGroup>
+	<!-- C# -->
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.CSharp" Version="4.7.0" />
+	</ItemGroup>
+	<!-- WebSocket Server -->
+	<ItemGroup>
+		<PackageVersion Include="Fleck" Version="1.2.0" />
+	</ItemGroup>
+	<!-- DNS(Ae.DNS) -->
+	<ItemGroup>
+		<PackageVersion Include="Ae.DNS.Client" Version="0.0.17" />
+		<PackageVersion Include="Ae.Dns.Protocol" Version="0.0.17" />
+	</ItemGroup>
+	<!-- DNS(DnsClient) -->
+	<ItemGroup>
+		<PackageVersion Include="DnsClient" Version="1.7.0" />
+	</ItemGroup>
+	<!-- DNS -->
+	<ItemGroup>
+		<PackageVersion Include="DNS" Version="7.0.0" />
+	</ItemGroup>
+	<!-- Cryptographic Algorithms & Protocols -->
+	<ItemGroup>
+		<PackageVersion Include="Portable.BouncyCastle" Version="1.9.0" />
+	</ItemGroup>
+	<!-- Avalonia -->
+	<ItemGroup>
+		<PackageVersion Include="Avalonia" Version="$(Version_Avalonia)" />
+		<PackageVersion Include="Avalonia.Desktop" Version="$(Version_Avalonia)" />
+		<PackageVersion Include="Avalonia.Skia" Version="$(Version_Avalonia)" />
+		<PackageVersion Include="Avalonia.Diagnostics" Version="$(Version_Avalonia)" />
+		<PackageVersion Include="Avalonia.ReactiveUI" Version="$(Version_Avalonia)" />
+		<!--<PackageVersion Include="Avalonia.Direct2D1" Version="$(Version_Avalonia)" />-->
+		<PackageVersion Include="Avalonia.Controls.DataGrid" Version="$(Version_Avalonia)" />
+		<PackageVersion Include="Avalonia.Native" Version="$(Version_Avalonia)" />
+		<PackageVersion Include="Avalonia.Win32" Version="$(Version_Avalonia)" />
+		<PackageVersion Include="Avalonia.X11" Version="$(Version_Avalonia)" />
+	</ItemGroup>
+	<!-- Avalonia Xaml Behaviors -->
+	<ItemGroup>
+		<PackageVersion Include="Avalonia.Xaml.Behaviors" Version="$(Version_Avalonia_Xaml_Behaviors)" />
+	</ItemGroup>
+	<!-- Avalonia Edit -->
+	<ItemGroup>
+		<PackageVersion Include="Avalonia.AvaloniaEdit" Version="$(Version_Avalonia_Edit)" />
+	</ItemGroup>
+	<!-- Avalonia CefNet -->
+	<ItemGroup>
+		<PackageVersion Include="CefNet.Avalonia" Version="$(Version_Avalonia_CefNet)" />
+	</ItemGroup>
+	<!-- Avalonia LibVLCSharp -->
+	<ItemGroup>
+		<PackageVersion Include="LibVLCSharp.Avalonia" Version="$(Version_Avalonia_LibVLCSharp)" />
+	</ItemGroup>
+	<!-- Avalonia FluentUI -->
+	<ItemGroup>
+		<PackageVersion Include="FluentAvaloniaUI" Version="$(Version_Avalonia_FluentUI)" />
+	</ItemGroup>
+	<!-- Avalonia LiveChartsCore -->
+	<ItemGroup>
+		<PackageVersion Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="$(Version_Avalonia_LiveChartsCore_SkiaSharpView)" />
+	</ItemGroup>
+	<!-- Avalonia JumpLists -->
+	<ItemGroup>
+		<PackageVersion Include="JumpLists.Win32.Avalonia" Version="1.0.0" />
+	</ItemGroup>
+	<!-- Avalonia WebView2 -->
+	<ItemGroup>
+		<PackageVersion Include="WebView2.Avalonia" Version="1.0.1264.42-preview.220713.10" />
+	</ItemGroup>
+	<!-- V2Ray Android -->
+	<ItemGroup>
+		<PackageVersion Include="XAB.AndroidLibV2rayLite" Version="1.0.0.1" />
+		<!--<PackageVersion Include="Karamunting.KotlinX.Coroutines.Core" Version="1.4.2" />-->
+		<PackageVersion Include="Xamarin.KotlinX.Coroutines.Core" Version="1.6.4.2" />
+		<PackageVersion Include="Xamarin.KotlinX.Coroutines.Android" Version="1.6.4.2" />
+		<PackageVersion Include="Xamarin.Android.ReactiveX.RxJava3.RxJava" Version="3.1.5.3" />
+	</ItemGroup>
+	<!-- Xamarin.Android -->
+	<ItemGroup>
+		<PackageVersion Include="Xamarin.Build.Download" Version="0.11.4" />
+		<PackageVersion Include="Xamarin.Google.Dagger" Version="2.44.2" />
+		<PackageVersion Include="Xamarin.Google.MLKit.BarcodeScanning" Version="117.0.3" />
+		<PackageVersion Include="Plugin.CurrentActivity" Version="2.1.0.4" />
+		<PackageVersion Include="de.hdodenhof.circleimageview" Version="3.1.0.4" />
+		<PackageVersion Include="Square.OkHttp3" Version="4.10.0" />
+		<PackageVersion Include="Square.Picasso" Version="2.71828.0" />
+		<PackageVersion Include="XAB.FlexboxLayout" Version="3.0.0.2" />
+	</ItemGroup>
+	<!-- Xamarin.AndroidX -->
+	<ItemGroup>
+		<PackageVersion Include="Xamarin.AndroidX.Migration" Version="1.0.10" />
+		<PackageVersion Include="Xamarin.AndroidX.AppCompat" Version="1.6.0.1" />
+		<PackageVersion Include="Xamarin.AndroidX.Emoji.AppCompat" Version="1.1.0.11" />
+		<PackageVersion Include="Xamarin.AndroidX.Fragment" Version="1.5.5.1" />
+		<PackageVersion Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.9" />
+		<PackageVersion Include="Xamarin.Google.Android.Material" Version="1.7.0.2" />
+		<PackageVersion Include="Xamarin.AndroidX.SwipeRefreshLayout" Version="1.1.0.11" />
+		<PackageVersion Include="Xamarin.AndroidX.ConstraintLayout" Version="2.1.4.3" />
+		<PackageVersion Include="Xamarin.AndroidX.Navigation.UI" Version="2.5.3.1" />
+		<PackageVersion Include="Xamarin.AndroidX.Navigation.Fragment" Version="2.5.3.1" />
+		<PackageVersion Include="Xamarin.AndroidX.ViewPager2" Version="1.0.0.18" />
+		<PackageVersion Include="Xamarin.AndroidX.Activity" Version="1.6.1.1" />
+		<PackageVersion Include="Xamarin.AndroidX.Biometric" Version="1.1.0.12" />
+		<PackageVersion Include="Xamarin.AndroidX.ExifInterface" Version="1.3.5.1" />
+		<PackageVersion Include="Xamarin.AndroidX.Legacy.Support.Core.UI" Version="1.0.0.17" />
+		<PackageVersion Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.5.1.2" />
+		<PackageVersion Include="Xamarin.AndroidX.Camera.Camera2" Version="1.2.0.1" />
+		<PackageVersion Include="Xamarin.AndroidX.Camera.Lifecycle" Version="1.2.0.1" />
+		<PackageVersion Include="Xamarin.AndroidX.Camera.View" Version="1.2.0.1" />
+		<PackageVersion Include="Xamarin.AndroidX.Window" Version="1.0.0.11" />
+		<PackageVersion Include="Xamarin.AndroidX.WebKit" Version="1.5.0.2" />
+	</ItemGroup>
+	<!-- Xamarin.iOS -->
+	<ItemGroup>
+		<PackageVersion Include="Toast.iOS" Version="1.2.0" />
+	</ItemGroup>
+	<!-- UWP/WinUI2/3 -->
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
+		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
+	</ItemGroup>
+	<!-- Yet Another Reverse Proxy -->
+	<ItemGroup>
+		<PackageVersion Include="Yarp.ReverseProxy" Version="1.1.1" />
+	</ItemGroup>
+	<!-- WinDivert -->
+	<ItemGroup>
+		<PackageVersion Include="Aigio.WinDivertSharp" Version="1.4.4.3" />
+	</ItemGroup>
+	<!-- ArchiSteamFarm Library -->
+	<ItemGroup>
+		<PackageVersion Include="ArchiSteamFarm.Library" Version="$(Version_ArchiSteamFarm_Library)" />
 	</ItemGroup>
 </Project>
