--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -244,6 +244,13 @@
 		<PackageVersion Include="AspNet.Security.OAuth.QQ" Version="7.0.0" />
 		<PackageVersion Include="AspNet.Security.OAuth.Apple" Version="7.0.0" />
 	</ItemGroup>
+	<!-- OpenIddict 库提供 OAuth2 和 OpenId 服务授权 -->
+	<ItemGroup>
+		<PackageVersion Include="OpenIddict.Core" Version="4.0.0" />
+		<PackageVersion Include="OpenIddict.Quartz" Version="4.0.0" />
+		<PackageVersion Include="OpenIddict.AspNetCore" Version="4.0.0" />
+		<PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="4.0.0" />
+	</ItemGroup>
 	<!-- MicrosoftAccount -->
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="7.0.2" />
