--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -594,4 +594,8 @@
 	<ItemGroup>
 		<PackageVersion Include="WinAuth.Library" Version="3.623.20209.21649" />
 	</ItemGroup>
+	<!-- IdentityModel -->
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.IdentityModel.Tokens" Version="6.26.1" />
+	</ItemGroup>
 </Project>
