--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,13 +8,13 @@
 		<!-- RxUI -->
 		<Version_ReactiveUI>18.4.22</Version_ReactiveUI>
 		<!-- Avalonia HarfBuzzSharp SkiaSharp -->
-		<Version_Avalonia>0.10.18</Version_Avalonia>
-		<Version_Avalonia_Xaml_Behaviors>0.10.18</Version_Avalonia_Xaml_Behaviors>
-		<Version_Avalonia_Edit>0.10.12.2</Version_Avalonia_Edit>
+		<Version_Avalonia>11.0.0-preview5</Version_Avalonia>
+		<Version_Avalonia_Xaml_Behaviors>11.0.0-preview5</Version_Avalonia_Xaml_Behaviors>
+		<Version_Avalonia_Edit>11.0.0-preview5</Version_Avalonia_Edit>
 		<Version_Avalonia_CefNet>105.3.22248.142</Version_Avalonia_CefNet>
 		<Version_Avalonia_LibVLCSharp>3.6.7</Version_Avalonia_LibVLCSharp>
-		<Version_Avalonia_FluentUI>1.4.5</Version_Avalonia_FluentUI>
-		<Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.701</Version_Avalonia_LiveChartsCore_SkiaSharpView>
+		<Version_Avalonia_FluentUI>2.0.0-preview5.1</Version_Avalonia_FluentUI>
+		<Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.700-11.0.0-preview5</Version_Avalonia_LiveChartsCore_SkiaSharpView>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/HarfBuzzSharp.props -->
 		<Version_HarfBuzzSharp>2.8.2.3</Version_HarfBuzzSharp>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/SkiaSharp.props -->
