--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,8 +11,8 @@
 		<Version_BDSteamClientModels>1.23.10209.11223</Version_BDSteamClientModels>
 	</PropertyGroup>
 	<PropertyGroup>
-		<Version_BDWTTSSDK>1.23.10222.11540</Version_BDWTTSSDK>
-	</PropertyGroup>
+		<Version_BDWTTSSDK>1.23.10222.11540</Version_BDWTTSSDKMicrosoft.VisualStudio.Azure.Containers.Tools.Targets
+</PropertyGroup>
 	<!-- RxUI -->
 	<PropertyGroup>
 		<Version_ReactiveUI>18.4.22</Version_ReactiveUI>
@@ -120,7 +120,7 @@
 	</ItemGroup>
 	<!-- Visual Studio Publish Docker Container -->
 	<ItemGroup>
-		<PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+		<PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
 	</ItemGroup>
 	<!-- Algorithm -->
 	<ItemGroup>
@@ -143,7 +143,7 @@
 		<PackageVersion Include="AutoMapper.Extensions.ExpressionMapping" Version="6.0.3" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection"  Version="12.0.0" />
+		<PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
 	</ItemGroup>
 	<!-- Quartz JobSchedule -->
 	<ItemGroup>
