--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,7 +2,7 @@
 	<!-- NuGet 错误 NU1011 PackageVersion 项不能包含浮动版本。 -->
 	<!-- BD Common -->
 	<PropertyGroup>
-		<Version_BDCommon>1.23.10309.12315</Version_BDCommon>
+		<Version_BDCommon>1.23.10321.11920</Version_BDCommon>
 	</PropertyGroup>
 	<PropertyGroup>
 		<Version_BDSteamClient>1.23.10302.10125</Version_BDSteamClient>
@@ -815,6 +815,15 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageVersion Include="Xamarin.AndroidX.WebKit" Version="1.5.0.2" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Xamarin.AndroidX.Browser" Version="1.4.0.4" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Xamarin.AndroidX.Security.SecurityCrypto" Version="1.0.0.9" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Xamarin.Google.Crypto.Tink.Android" Version="1.7.0.2" />
 	</ItemGroup>
 	<!-- Xamarin.iOS -->
 	<ItemGroup>
