--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -17,9 +17,9 @@
 	<PropertyGroup>
 		<Version_ReactiveUI>18.4.26</Version_ReactiveUI>
 	</PropertyGroup>
-	<!-- Avalonia HarfBuzzSharp SkiaSharp -->
+	<!-- Avalonia-->
 	<PropertyGroup>
-		<Version_Avalonia>11.0.999-cibuild0031947-beta</Version_Avalonia>
+		<Version_Avalonia>11.0.999-cibuild0031870-beta</Version_Avalonia>
 	</PropertyGroup>
 	<PropertyGroup>
 		<Version_Avalonia_Xaml_Behaviors>11.0.0-preview5</Version_Avalonia_Xaml_Behaviors>
@@ -39,14 +39,17 @@
 	<PropertyGroup>
 		<Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.701</Version_Avalonia_LiveChartsCore_SkiaSharpView>
 	</PropertyGroup>
+	<!-- HarfBuzzSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/HarfBuzzSharp.props -->
 		<Version_HarfBuzzSharp>2.8.2.3</Version_HarfBuzzSharp>
 	</PropertyGroup>
+	<!-- SkiaSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/SkiaSharp.props -->
 		<Version_SkiaSharp>2.88.3</Version_SkiaSharp>
 	</PropertyGroup>
+	<!-- CommandLine -->
 	<PropertyGroup>
 		<Version_CommandLine>2.0.0-beta4.22272.1</Version_CommandLine>
 	</PropertyGroup>
