--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -395,6 +395,9 @@
 		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageVersion Include="Microsoft.Extensions.Logging.EventLog" Version="7.0.0" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageVersion Include="Microsoft.Extensions.Logging.AzureAppServices" Version="7.0.4" />
 	</ItemGroup>
 	<ItemGroup>
