--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -881,4 +881,8 @@
 	<ItemGroup>
 		<PackageVersion Include="SteamKit2" Version="2.4.1" />
 	</ItemGroup>
+	<!-- IPC -->
+	<ItemGroup>
+		<PackageVersion Include="dotnetCampus.Ipc" Version="2.0.0-alpha303" />
+	</ItemGroup>
 </Project>
