--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -416,6 +416,9 @@
 		<PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.5" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageVersion Include="StackExchange.Redis" Version="2.6.104" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageVersion Include="Microsoft.Extensions.Primitives" Version="7.0.0" />
 	</ItemGroup>
 	<!-- AspNetCore 7.0 -->
