--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -409,6 +409,9 @@
     <ItemGroup>
         <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     </ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+	</ItemGroup>
     <ItemGroup>
         <PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
     </ItemGroup>
