--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -19,10 +19,10 @@
     </PropertyGroup>
     <!-- Avalonia-->
     <PropertyGroup>
-        <Version_Avalonia>11.0.999-cibuild0034035-beta</Version_Avalonia>
+        <Version_Avalonia>11.0.0-preview8</Version_Avalonia>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_Xaml_Behaviors>11.0.0-preview7</Version_Avalonia_Xaml_Behaviors>
+        <Version_Avalonia_Xaml_Behaviors>11.0.0-preview8</Version_Avalonia_Xaml_Behaviors>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_Edit>11.0.0-preview6</Version_Avalonia_Edit>
@@ -34,10 +34,10 @@
         <Version_Avalonia_LibVLCSharp>3.7.0</Version_Avalonia_LibVLCSharp>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_FluentUI>2.0.0-preview7.1</Version_Avalonia_FluentUI>
+        <Version_Avalonia_FluentUI>2.0.0-preview8</Version_Avalonia_FluentUI>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.701</Version_Avalonia_LiveChartsCore_SkiaSharpView>
+        <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.700-11.0.0-preview8</Version_Avalonia_LiveChartsCore_SkiaSharpView>
     </PropertyGroup>
     <!-- HarfBuzzSharp -->
     <PropertyGroup>
