--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -613,7 +613,7 @@
     </ItemGroup>
     <!-- SkiaSharp -->
     <ItemGroup>
-        <PackageVersion Include="SkiaSharp" Version="$(Version_SkiaSharp)" />
+        <PackageVersion Include="SkiaSharp" Version="$(z`Version_SkiaSharp)" />
         <PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="$(Version_SkiaSharp)" />
     </ItemGroup>
     <!-- Compression Tar, GZip, BZip2 -->
@@ -916,4 +916,23 @@
     <ItemGroup>
         <PackageVersion Include="ValveKeyValue" Version="0.8.2.162" />
     </ItemGroup>
+	<!-- Refit: The automatic type-safe REST library for .NET Core, Xamarin and .NET -->
+	<ItemGroup>
+		<PackageVersion Include="Refit" Version="6.3.2" />
+	</ItemGroup>
+	<ItemGroup>
+		<!-- Remove Microsoft.Extensions.Http Usage https://devblogs.microsoft.com/dotnet/performance-improvements-in-dotnet-maui/#remove-microsoft-extensions-http-usage -->
+		<PackageVersion Include="Refit.HttpClientFactory" Version="6.3.2" />
+	</ItemGroup>
+	<!-- Fusillade: An opinionated HTTP library for Mobile Development -->
+	<ItemGroup>
+		<PackageVersion Include="fusillade" Version="2.4.67" />
+	</ItemGroup>
+	<!-- Akavache: An Asynchronous Key-Value Store for Native Applications -->
+	<ItemGroup>
+		<PackageVersion Include="akavache" Version="9.1.7" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="akavache.sqlite3" Version="9.1.7" />
+	</ItemGroup>
 </Project>
