🚑修复版本号错误的问题

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -613,7 +613,7 @@
     </ItemGroup>
     <!-- SkiaSharp -->
     <ItemGroup>
-        <PackageVersion Include="SkiaSharp" Version="$(z`Version_SkiaSharp)" />
+        <PackageVersion Include="SkiaSharp" Version="$(Version_SkiaSharp)" />
         <PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="$(Version_SkiaSharp)" />
     </ItemGroup>
     <!-- Compression Tar, GZip, BZip2 -->
