--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -28,6 +28,9 @@
         <Version_Avalonia_Edit>11.0.0-preview6</Version_Avalonia_Edit>
     </PropertyGroup>
     <PropertyGroup>
+        <Version_Avalonia_Markdown>11.0.0-c1</Version_Avalonia_Markdown>
+    </PropertyGroup>
+    <PropertyGroup>
         <Version_Avalonia_CefNet>105.3.22248.142</Version_Avalonia_CefNet>
     </PropertyGroup>
     <PropertyGroup>
@@ -738,6 +741,10 @@
     <!-- Avalonia WebView2 -->
     <ItemGroup>
         <PackageVersion Include="WebView2.Avalonia" Version="1.0.1518.46-preview.230207.17" />
+    </ItemGroup>
+    <!-- Avalonia Markdown -->
+    <ItemGroup>
+        <PackageVersion Include="Markdown.Avalonia" Version="$(Version_Avalonia_Markdown)" />
     </ItemGroup>
     <!-- V2Ray Android -->
     <ItemGroup>
