--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -946,4 +946,9 @@
 	<ItemGroup>
 		<PackageVersion Include="Splat.Drawing" Version="14.6.8" />
 	</ItemGroup>
+    <!-- Microsoft.CodeAnalysis -->
+    <ItemGroup>
+        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" />
+        <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" />
+    </ItemGroup>
 </Project>
