--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -19,13 +19,13 @@
     </PropertyGroup>
     <!-- Avalonia-->
     <PropertyGroup>
-        <Version_Avalonia>11.0.0-preview8</Version_Avalonia>
+        <Version_Avalonia>11.0.0-rc1.1</Version_Avalonia>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_Xaml_Behaviors>11.0.0-preview8</Version_Avalonia_Xaml_Behaviors>
+        <Version_Avalonia_Xaml_Behaviors>11.0.0-rc1.1</Version_Avalonia_Xaml_Behaviors>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_Edit>11.0.0-preview6</Version_Avalonia_Edit>
+        <Version_Avalonia_Edit>11.0.0-rc1.1</Version_Avalonia_Edit>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_Markdown>11.0.0-c1</Version_Avalonia_Markdown>
@@ -37,7 +37,7 @@
         <Version_Avalonia_LibVLCSharp>3.7.0</Version_Avalonia_LibVLCSharp>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_FluentUI>2.0.0-preview8</Version_Avalonia_FluentUI>
+        <Version_Avalonia_FluentUI>2.0.0-rc1</Version_Avalonia_FluentUI>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.700-11.0.0-preview8</Version_Avalonia_LiveChartsCore_SkiaSharpView>
