--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -28,7 +28,7 @@
         <Version_Avalonia_Edit>11.0.0-rc1.1</Version_Avalonia_Edit>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_Markdown>11.0.0-c1</Version_Avalonia_Markdown>
+        <Version_Avalonia_Markdown>11.0.0-d1</Version_Avalonia_Markdown>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_CefNet>105.3.22248.142</Version_Avalonia_CefNet>
@@ -40,7 +40,7 @@
         <Version_Avalonia_FluentUI>2.0.0-rc1</Version_Avalonia_FluentUI>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.700-11.0.0-preview8</Version_Avalonia_LiveChartsCore_SkiaSharpView>
+        <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.700-11.0.0-rc1.1</Version_Avalonia_LiveChartsCore_SkiaSharpView>
     </PropertyGroup>
     <!-- HarfBuzzSharp -->
     <PropertyGroup>
