--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -442,6 +442,9 @@
     <ItemGroup>
         <PackageVersion Include="Microsoft.Extensions.Primitives" Version="7.0.0" />
     </ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.Extensions.FileProviders.Physical" Version="7.0.0" />
+	</ItemGroup>
     <!-- AspNetCore 7.0 -->
     <ItemGroup>
         <PackageVersion Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.5" />
