--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -141,6 +141,10 @@
     <ItemGroup>
         <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     </ItemGroup>
+    <!-- Azure Blobs -->
+    <ItemGroup>
+        <PackageVersion Include="Azure.Storage.Blobs" Version="12.17.0-beta.1" />
+    </ItemGroup>
     <!-- Algorithm -->
     <ItemGroup>
         <PackageVersion Include="Crc32.NET" Version="1.2.0" />
