--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -928,9 +928,9 @@
 		<PackageVersion Include="GtkSharp" Version="3.24.24.95" />
 	</ItemGroup>
 	<!-- WinAuth -->
-	<ItemGroup>
+	<!--<ItemGroup>
 		<PackageVersion Include="WinAuth.Library" Version="3.623.20625.21123" />
-	</ItemGroup>
+	</ItemGroup>-->
 	<!-- IdentityModel -->
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.IdentityModel.Tokens" Version="6.31.0" />
