--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -592,8 +592,8 @@
 	</ItemGroup>
 	<!-- Puppeteer 库提供高级 API，以使用 DevTools 协议控制基于 Chromium 的浏览器。 -->
 	<ItemGroup>
-        <PackageVersion Include="PuppeteerSharp" Version="10.1.0" />
-    </ItemGroup>
+		<PackageVersion Include="PuppeteerSharp" Version="10.1.0" />
+	</ItemGroup>
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.Playwright" Version="1.35.0" />
 	</ItemGroup>
@@ -908,7 +908,10 @@
 	</ItemGroup>
 	<!-- WinDivert -->
 	<ItemGroup>
-		<PackageVersion Include="Aigio.WinDivertSharp" Version="1.4.4.3" />
+		<PackageVersion Include="Aigio.WinDivertSharp" Version="1.4.4.5" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Aigio.WinDivertSharp.NativeAssets.Win32" Version="1.4.4.4" />
 	</ItemGroup>
 	<!-- ArchiSteamFarm Library -->
 	<ItemGroup>
