--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -28,7 +28,7 @@
         <Version_Avalonia_Edit>11.0.0</Version_Avalonia_Edit>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_Markdown>11.0.0-d1</Version_Avalonia_Markdown>
+        <Version_Avalonia_Markdown>11.0.0</Version_Avalonia_Markdown>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_CefNet>105.3.22248.142</Version_Avalonia_CefNet>
@@ -37,10 +37,10 @@
         <Version_Avalonia_LibVLCSharp>3.7.0</Version_Avalonia_LibVLCSharp>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_FluentUI>2.0.0-rc1</Version_Avalonia_FluentUI>
+        <Version_Avalonia_FluentUI>2.0.0</Version_Avalonia_FluentUI>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.802-11.0.0-rc1.1</Version_Avalonia_LiveChartsCore_SkiaSharpView>
+        <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-beta.810</Version_Avalonia_LiveChartsCore_SkiaSharpView>
     </PropertyGroup>
 	<!-- HarfBuzzSharp -->
 	<PropertyGroup>
