--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -177,6 +177,9 @@
 	<ItemGroup>
 		<PackageVersion Include="Quartz.AspNetCore" Version="3.6.3" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="NuGet.Versioning" Version="6.6.1" />
+	</ItemGroup>
 	<!-- Code Style -->
 	<ItemGroup>
 		<PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.507" />
