--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -570,6 +570,12 @@
 	<ItemGroup>
 		<PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="System.Runtime.Caching" Version="7.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
+	</ItemGroup>
 	<!-- Edge WebView2 -->
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="7.0.92" />
