--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -455,6 +455,9 @@
 		<PackageVersion Include="StackExchange.Redis" Version="2.6.122" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageVersion Include="InitQ " Version="1.0.0.18" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageVersion Include="Microsoft.Extensions.Primitives" Version="7.0.0" />
 	</ItemGroup>
 	<ItemGroup>
