🐛 Fatal error. System.AccessViolationException: Attempted to read or write protected memory. This is often an indication that other memory is corrupt. Repeat 2 times: --------------------------------    at SkiaSharp.SkiaApi.sk_codec_get_scaled_dimensions(IntPtr, Single, SkiaSharp.SKSizeI*) --------------------------------    at SkiaSharp.SKCodec.GetScaledDimensions(Single)    at Avalonia.Skia.ImmutableBitmap..ctor(System.IO.Stream, Int32, Boolean, Avalonia.Media.Imaging.BitmapInterpolationMode)    at Avalonia.Skia.PlatformRenderInterface.LoadBitmapToWidth(System.IO.Stream, Int32, Avalonia.Media.Imaging.BitmapInterpolationMode)    at Avalonia.Media.Imaging.Bitmap.DecodeToWidth(System.IO.Stream, Int32, Avalonia.Media.Imaging.BitmapInterpolationMode)    at Avalonia.Gif.Image2.DecodeImage(System.IO.Stream)

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -50,7 +50,7 @@
 	<!-- SkiaSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/SkiaSharp.props -->
-		<Version_SkiaSharp>2.88.6</Version_SkiaSharp>
+		<Version_SkiaSharp>2.88.5</Version_SkiaSharp>
 	</PropertyGroup>
 	<!-- CommandLine -->
 	<PropertyGroup>
@@ -667,6 +667,7 @@
 	<ItemGroup>
 		<PackageVersion Include="SkiaSharp" Version="$(Version_SkiaSharp)" />
 		<PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="$(Version_SkiaSharp)" />
+		<PackageVersion Include="SkiaSharp.HarfBuzz" Version="$(Version_SkiaSharp)" />
 	</ItemGroup>
 	<!-- Compression Tar, GZip, BZip2 -->
 	<ItemGroup>
